[gd_scene load_steps=4 format=3 uid="uid://8lfmd0hpxc1t"]

[ext_resource type="Script" uid="uid://bm57p7oynkatv" path="res://objects/common/collectable_item.gd" id="1_base"]
[ext_resource type="Texture2D" uid="uid://cfbsbntfyd7do" path="res://objects/common/shadow_small.png" id="2_shadow"]

[sub_resource type="CircleShape2D" id="CircleShape2D_base"]
radius = 8.0

[node name="CollectableItem" type="Area2D"]
script = ExtResource("1_base")

[node name="ItemSprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)

[node name="ShadowSmall" type="Sprite2D" parent="."]
texture = ExtResource("2_shadow")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_base")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
